--- a/front/package.json
+++ b/front/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@handsontable/react": "^14.6.0",
     "axios": "^1.7.7",
+    "dotenv": "^16.4.5",
+    "env-cmd": "^10.1.0",
     "exceljs": "^4.4.0",
     "exif-js": "^2.3.0",
     "file-saver": "^2.0.5",
